script/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-test
  labels:
    app: daemonset-test
spec:
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80

      # tolerations:
      #   - key: node-role.kubernetes.io/control-plane
      #     operator: Exists
      #     effect: NoSchedule
      #   - key: node-role.kubernetes.io/master
      #     operator: Exists
      #     effect: NoSchedule
      # containers:
      #   - name: fluentd-elasticsearch
      #     image: quay.io/fluentd_elasticsearch/fluentd:v2.5.2
      #     resources:
      #       limits:
      #         memory: 200Mi
      #       requests:
      #         cpu: 100m
      #         memory: 200Mi
      #     volumeMounts:
      #       - name: varlog
      #         mountPath: /var/log
      # terminationGracePeriodSeconds: 30
      # volumes:
      #   - name: varlog
      #     hostPath:
      #       path: /var/log
