script/pod-httpd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  labels:
    name: httpd-pod
spec:
  containers:
    - name: httpd-container
      image: httpd:latest
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
