script/pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod
  namespace: default
spec:
  containers:
    - name: mysql-container
      image: mysql:latest
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
      ports:
        - containerPort: 3306
      volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-storage
      persistentVolumeClaim:
        claimName: pvc-example
