script/pod-phpmyadmin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phpmyadmin-pod
  labels:
    name: phpmyadmin-pod
spec:
  containers:
    - name: phpmyadmin-pod
      image: phpmyadmin
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 3306
