script/pod-simple-express.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-express-pod
  labels:
    name: simple-express-pod
    tag: 1.0.0
spec:
  containers:
    - name: simple-express-container
      image: argyantodimasn/simple-express:1.0.0
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 3000
