script/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod
    db: mysql-db
  namespace: development
spec:
  containers:
    - name: mysql-db
      image: mysql:latest
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
      ports:
        - containerPort: 3306
