script/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefullset
  labels:
    name: nginx-statefull
spec:
  serviceName: nginx-statefullset-service
  replicas: 3
  selector:
    matchLabels:
      name: nginx-statefull
  volumeClaimTemplates:
    - metadata:
        name: nginx-stateful-volume-claim
      spec:
        storageClassName: ""
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      name: nginx-statefull
      labels:
        name: nginx-statefull
    spec:
      containers:
        - name: nginx-statefull
          image: nginx:latest
          volumeMounts:
            - mountPath: /app/data
              name: nginx-stateful-volume-claim
---
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mystatefulset
# spec:
#   selector:
#     matchLabels:
#       app: myapp
#   serviceName: <ServiceName>
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         app: myapp
#     spec:
#       containers:
#         - name: myapp
#           image: registry.k8s.io/nginx-slim:0.8
#           ports:
#             - containerPort: 80
#               name: web
#           volumeMounts:
#             - name: www
#               mountPath: /usr/share/nginx/html
#   volumeClaimTemplates:
#     - metadata:
#         name: www
#       spec:
#         accessModes: ["ReadWriteOnce"]
#         resources:
#           requests:
#             storage: 1Gi
