script/deployment-simple-express.yaml
#version 1.0.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-express-1-0-0
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-express-1.0.0
  template:
    metadata:
      labels:
        app: simple-express-1.0.0
        tag: "1.0.0"
    spec:
      containers:
        - name: simple-express-container
          image: argyantodimasn/simple-express:1.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-simple-express-1-0-0
  namespace: default
spec:
  selector:
    app: simple-express-1.0.0
    tag: "1.0.0"
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer

---
#version 1.1
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: simple-express-1-1
#   namespace: default
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: simple-express-1.1
#   template:
#     metadata:
#       labels:
#         app: simple-express-1.1
#         tag: "1.1"
#     spec:
#       containers:
#         - name: simple-express-container
#           image: argyantodimasn/simple-express:1.1
#           resources:
#             limits:
#               memory: "128Mi"
#               cpu: "500m"
#           ports:
#             - containerPort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: service-simple-express-1-1
#   namespace: default
# spec:
#   selector:
#     app: simple-express-1.1
#     tag: "1.1"
#   ports:
#     - protocol: TCP
#       port: 8081
#       targetPort: 3000
#   type: LoadBalancer
