script/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
