script/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
  namespace: development
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30000
