script/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
    name: service-nginx
  namespace: development
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
