script/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
  namespace: development
spec:
  rules:
    - host: mynginx.com
      http:
        paths:
          - pathType: Prefix
            path: "/service1"
            backend:
              service:
                name: nginx-service1
                port:
                  number: 8080
          - pathType: Prefix
            path: "/service2"
            backend:
              service:
                name: nginx-service2
                port:
                  number: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
  namespace: development
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  namespace: development
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
---
